--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,4 @@
 [package]
-
 name = "threadpool"
 version = "1.8.1"
 authors = ["The Rust Project Developers", "Corey Farwell <coreyf@rwell.org>", "Stefan Schindler <dns2utf8@estada.ch>"]
@@ -13,6 +12,7 @@ A thread pool for running a number of jobs on a fixed set of worker threads.
 """
 keywords = ["threadpool", "thread", "pool", "threading", "parallelism"]
 categories = ["concurrency", "os"]
+edition = "2021"
 
 include = [
     "**/*.rs",
@@ -23,4 +23,7 @@ include = [
 ]
 
 [dependencies]
-num_cpus = "1.13"
+num_cpus = "1"
+crossbeam = "0.8"
+crossbeam-channel = {version = "0.5", optional = true}
+parking_lot = { path="../parking_lot" }
